Fix overflow on mobile due to min-width elements. Add responsive sizing to page title

--- a/app/globals.css
+++ b/app/globals.css
@@ -257,7 +257,7 @@
   }
 
   h1 {
-    @apply font-raleway text-7xl font-semibold;
+    @apply font-raleway text-6xl sm:text-7xl font-semibold;
   }
 
   h2 {
